--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,9 @@ header p {
   display: inline-block;
 }
 .heroImg {
-  background: rgba(172,172,172,1);
+  background: black;
   padding: 50px 5px;
+  max-height: 850px;
 }
 .content {
   max-width: 95%;
@@ -44,7 +45,8 @@ h1{
 }
 
 .secondSection {
-  background: rgba(172,172,172,1);
+  background: black;
+ 
   padding: 30px 5px;
 }
 .content2{
@@ -99,22 +101,25 @@ p1{
 }
 
 .pre-projects {
-  background-color:  rgba(172,172,172,1);
-  padding-left: 5px;
-  height: 25px;
-  font-size: 22px;
+  background-color: black;
+  padding-left: 15px;
+  
+  height: 35px;
+  font-size: 30px;
+  color: white;
+
 }
 
 .projects {
-  background-color:  rgba(172,172,172,1);
-  height: 450px;
+  background-color:  black;
+  height: 550px;
   padding: 20px;
   position: relative;
   box-sizing:content-box;
   align-items:center;
- text-align: center;
- justify-content:center;
- align-content: center;
+  text-align: center;
+  justify-content:center;
+  align-content: center;
   display:grid;
   grid-template-columns: 50% 50%;
   grid-row: 50% 50%;
@@ -162,4 +167,48 @@ footer ul {
 footer li {
   display: inline-block;
   padding: 0px 7px;
+}
+
+a:hover {
+  background-color: #B2CAF6;
+}
+
+
+
+
+
+
+.loader{
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  transition: opacity 0.75s, visibility 0.75s;
+}
+.loader-hidden{
+  opacity: 0;
+  visibility: hidden;
+}
+.loader::after{
+  content:"";
+  height: 75px;
+  width: 75px;
+  border: 15px solid #dddddd;
+  border-top-color: #726DA8;
+  border-radius: 50%;
+  animation: loading 1s ease infinite;
+}
+
+@keyframes loading{
+  from{
+    transform: rotate(0turn);
+  }
+  to{
+    transform: rotate(1turn);
+  }
 }
